--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~24.0.15",
+		"@types/node": "~12.0.10",
 		"@types/prettier": "~1.16.4",
 		"jest": "~24.8.0",
 		"ts-jest": "~24.0.2",
