--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"prettier": "~1.18.2",
-		"pug-lexer": "~4.1.0",
-		"pug-parser": "~5.0.1"
+		"pug-lexer": "~4.1.0"
 	},
 	"devDependencies": {
 		"@types/jest": "~24.0.15",
