--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
-		"lint": "",
+		"lint": "eslint --ext .ts src",
 		"test": "jest"
 	},
 	"keywords": [
@@ -31,6 +31,11 @@
 		"@types/jest": "~24.0.15",
 		"@types/node": "~12.0.10",
 		"@types/prettier": "~1.16.4",
+		"@typescript-eslint/eslint-plugin": "~1.11.0",
+		"@typescript-eslint/parser": "~1.11.0",
+		"eslint": "~6.0.1",
+		"eslint-config-prettier": "~6.0.0",
+		"eslint-plugin-prettier": "~3.1.0",
 		"jest": "~24.8.0",
 		"ts-jest": "~24.0.2",
 		"typescript": "~3.5.2"
