--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,5 @@ insert_final_newline = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+indent_style = space
+indent_size = 2
