--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "prettier-plugin-pug",
+	"name": "@prettier/plugin-pug",
 	"version": "1.0.0-alpha.9",
-	"description": "Plugin for Prettier to format pug code",
+	"description": "Prettier Pug Plugin",
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
@@ -15,13 +15,14 @@
 	],
 	"author": {
 		"name": "Christopher Quadflieg",
-		"email": "chrissi92@hotmail.de"
+		"email": "chrissi92@hotmail.de",
+		"url": "https://github.com/Shinigami92"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Shinigami92/prettier-plugin-pug.git"
+		"url": "https://github.com/prettier/plugin-pug.git"
 	},
-	"bugs": "https://github.com/Shinigami92/prettier-plugin-pug/issues",
+	"bugs": "https://github.com/prettier/plugin-pug/issues",
 	"license": "MIT",
 	"dependencies": {
 		"prettier": "~1.18.2",
