--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/no-inferrable-types": "off",
 		"@typescript-eslint/no-parameter-properties": "off",
+		"@typescript-eslint/no-unused-vars": "off",
 		"@typescript-eslint/prefer-string-starts-ends-with": "error"
 	}
 }
