--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@prettier/plugin-pug",
-	"version": "1.0.0-alpha.12",
+	"version": "1.0.0",
 	"description": "Prettier Pug Plugin",
 	"main": "dist/index.js",
 	"scripts": {
