--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
 	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": "./tsconfig.json"
+		"project": ["./tsconfig.json", "./test/tsconfig.json"]
 	},
 	"plugins": ["@typescript-eslint", "prettier"],
 	"rules": {
