--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
-		"lint": "eslint --ext .ts src",
+		"lint": "yarn lint:src && yarn lint:test",
+		"lint:src": "eslint --ext .ts src",
+		"lint:test": "eslint --ext .test.ts test",
 		"test": "jest"
 	},
 	"keywords": [
