--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"eslint.validate": ["javascript", "typescript"]
+	"eslint.validate": ["javascript", "typescript"],
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
