--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~24.0.22",
-		"@types/node": "~12.12.6",
+		"@types/node": "~12.12.7",
 		"@types/prettier": "~1.18.3",
 		"@typescript-eslint/eslint-plugin": "~2.6.1",
 		"@typescript-eslint/parser": "~2.6.1",
@@ -39,7 +39,7 @@
 		"eslint-config-prettier": "~6.5.0",
 		"eslint-plugin-prettier": "~3.1.1",
 		"jest": "~24.9.0",
-		"prettier": "~1.18.2",
+		"prettier": "1.19.1",
 		"ts-jest": "~24.1.0",
 		"typescript": "~3.7.2"
 	},
