Add format script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
+		"format": "prettier --write 'src/**/*.ts'",
 		"lint": "yarn lint:src && yarn lint:test",
 		"lint:src": "eslint --ext .ts src",
 		"lint:test": "eslint --ext .test.ts test",
