--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
 		"quotes": ["error", "single", { "avoidEscape": true }],
 		"semi": ["error", "always"],
 
-		"@typescript-eslint/ban-ts-ignore": "warn",
+		"@typescript-eslint/ban-ts-ignore": "off",
 		"@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
 		"@typescript-eslint/indent": ["error", "tab"],
 		"@typescript-eslint/interface-name-prefix": "off",
