Improve Azure Pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,49 @@
 pool:
     vmImage: 'ubuntu-latest'
 
+strategy:
+    matrix:
+        node_carbon:
+            # End-of-life: December 2019
+            node_version: 8.x
+        node_dubnium:
+            # End-of-life: April 2021
+            node_version: 10.x
+        node_erbium:
+            # End-of-life: April 2022
+            node_version: 12.x
+        node_current:
+            # End-of-life: June 2020
+            node_version: 13.x
+
 steps:
+    - task: NodeTool@0
+      inputs:
+          versionSpec: $(node_version)
+      displayName: 'Install Node'
+
     - task: YarnInstaller@3
       inputs:
           versionSpec: '1.x'
       displayName: 'Install Yarn'
 
-    - script: yarn
+    - script: yarn install --frozen-lockfile
       displayName: 'Install dependencies'
 
     - script: yarn lint
       displayName: 'Lint'
 
-    - script: yarn test --silent
+    - script: yarn jest --ci --reporters=default --reporters=jest-junit
       displayName: 'Test'
+
+    - task: PublishTestResults@2
+      condition: succeededOrFailed()
+      inputs:
+          testRunner: JUnit
+          testResultsFiles: 'junit.xml'
+
+    - script: yarn audit
+      displayName: 'Audit'
 
     - script: yarn build
       displayName: 'Build'
