--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-config-prettier": "~6.5.0",
 		"eslint-plugin-prettier": "~3.1.1",
 		"jest": "~24.9.0",
+		"jest-junit": "~9.0.0",
 		"prettier": "1.19.1",
 		"ts-jest": "~24.1.0",
 		"typescript": "~3.7.2"
