--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
 		"@typescript-eslint/no-inferrable-types": "off",
 		"@typescript-eslint/no-parameter-properties": "off",
 		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/prefer-nullish-coalescing": "warn",
+		"@typescript-eslint/prefer-optional-chain": "warn",
 		"@typescript-eslint/prefer-string-starts-ends-with": "error"
 	}
 }
