--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@prettier/plugin-pug",
-	"version": "1.1.4",
+	"version": "1.2.0-beta.1",
 	"description": "Prettier Pug Plugin",
 	"main": "dist/index.js",
 	"scripts": {
