--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
 
 		"@typescript-eslint/ban-ts-ignore": "off",
 		"@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
-		"@typescript-eslint/indent": ["error", "tab"],
+		"@typescript-eslint/indent": ["error", "tab", { "SwitchCase": 1, "ignoredNodes": ["MemberExpression"] }],
 		"@typescript-eslint/interface-name-prefix": "off",
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/no-inferrable-types": "off",
