Ignore some internal testings

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,58 @@ typings/
 dist
 
 test/private
+
+test/pug-tests/attrs.formatted.pug
+test/pug-tests/attrs.js.formatted.pug
+test/pug-tests/attrs.js.pug
+test/pug-tests/attrs.pug
+test/pug-tests/attrs.unescaped.formatted.pug
+test/pug-tests/attrs.unescaped.pug
+test/pug-tests/block-code.formatted.pug
+test/pug-tests/block-code.pug
+test/pug-tests/block-expansion.shorthands.formatted.pug
+test/pug-tests/block-expansion.shorthands.pug
+test/pug-tests/blocks-in-if.formatted.pug
+test/pug-tests/blocks-in-if.pug
+test/pug-tests/comments.formatted.pug
+test/pug-tests/comments.pug
+test/pug-tests/comments.source.formatted.pug
+test/pug-tests/comments.source.pug
+test/pug-tests/escaping-class-attribute.formatted.pug
+test/pug-tests/escaping-class-attribute.pug
+test/pug-tests/filters.coffeescript.formatted.pug
+test/pug-tests/filters.coffeescript.pug
+test/pug-tests/filters.custom.formatted.pug
+test/pug-tests/filters.custom.pug
+test/pug-tests/filters.include.formatted.pug
+test/pug-tests/filters.include.pug
+test/pug-tests/inheritance.extend.mixins.formatted.pug
+test/pug-tests/inheritance.extend.mixins.pug
+test/pug-tests/inline-block-comment.formatted.pug
+test/pug-tests/inline-block-comment.pug
+test/pug-tests/inline-tag.formatted.pug
+test/pug-tests/inline-tag.pug
+test/pug-tests/layout.append.without-block.formatted.pug
+test/pug-tests/layout.append.without-block.pug
+test/pug-tests/layout.multi.append.prepend.block.formatted.pug
+test/pug-tests/layout.multi.append.prepend.block.pug
+test/pug-tests/layout.prepend.without-block.formatted.pug
+test/pug-tests/layout.prepend.without-block.pug
+test/pug-tests/mixin.attrs.formatted.pug
+test/pug-tests/mixin.attrs.pug
+test/pug-tests/mixin.merge.formatted.pug
+test/pug-tests/mixin.merge.pug
+test/pug-tests/pipeless-filters.formatted.pug
+test/pug-tests/pipeless-filters.pug
+test/pug-tests/pre.formatted.pug
+test/pug-tests/pre.pug
+test/pug-tests/script.whitespace.formatted.pug
+test/pug-tests/script.whitespace.pug
+test/pug-tests/styles.formatted.pug
+test/pug-tests/styles.pug
+test/pug-tests/tags.self-closing.formatted.pug
+test/pug-tests/tags.self-closing.pug
+test/pug-tests/template.formatted.pug
+test/pug-tests/template.pug
+test/pug-tests/text.formatted.pug
+test/pug-tests/text.pug
