--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~24.9.0",
-		"@types/node": "~13.1.7",
+		"@types/node": "~13.1.8",
 		"@types/prettier": "~1.19.0",
-		"@typescript-eslint/eslint-plugin": "~2.16.0",
-		"@typescript-eslint/parser": "~2.16.0",
+		"@typescript-eslint/eslint-plugin": "~2.17.0",
+		"@typescript-eslint/parser": "~2.17.0",
+		"benchmark": "~2.1.4",
 		"eslint": "~6.8.0",
 		"eslint-config-prettier": "~6.9.0",
 		"eslint-plugin-prettier": "~3.1.2",
@@ -43,7 +44,7 @@
 		"jest-junit": "~10.0.0",
 		"prettier": "1.19.1",
 		"ts-jest": "~24.3.0",
-		"typescript": "~3.7.4"
+		"typescript": "~3.7.5"
 	},
 	"peerDependencies": {
 		"prettier": "^1.18.0"
