--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
-		"format": "prettier --write 'src/**/*.ts'",
+		"format": "prettier --write .",
 		"lint": "yarn lint:src && yarn lint:test",
 		"lint:src": "eslint --ext .ts src",
 		"lint:test": "eslint --ext .test.ts test",
@@ -31,19 +31,19 @@
 		"pug-lexer": "~4.1.0"
 	},
 	"devDependencies": {
-		"@types/jest": "~25.1.4",
-		"@types/node": "~13.9.3",
-		"@types/prettier": "~1.19.1",
-		"@typescript-eslint/eslint-plugin": "~2.25.0",
-		"@typescript-eslint/parser": "~2.25.0",
+		"@types/jest": "~25.2.1",
+		"@types/node": "~13.13.2",
+		"@types/prettier": "~2.0.0",
+		"@typescript-eslint/eslint-plugin": "~2.29.0",
+		"@typescript-eslint/parser": "~2.29.0",
 		"benchmark": "~2.1.4",
 		"eslint": "~6.8.0",
-		"eslint-config-prettier": "~6.10.1",
-		"eslint-plugin-prettier": "~3.1.2",
-		"jest": "~25.1.0",
+		"eslint-config-prettier": "~6.11.0",
+		"eslint-plugin-prettier": "~3.1.3",
+		"jest": "~25.4.0",
 		"jest-junit": "~10.0.0",
-		"prettier": "2.0.2",
-		"ts-jest": "~25.2.1",
+		"prettier": "2.0.5",
+		"ts-jest": "~25.4.0",
 		"typescript": "~3.8.3"
 	},
 	"peerDependencies": {
