--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,9 @@ strategy:
         node_13.x_current:
             # End-of-life: June 2020
             node_version: 13.x
+        node_14.x_current:
+            # End-of-life: April 2023
+            node_version: 14.x
 
 steps:
     - task: NodeTool@0
