--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
 	},
 	"bugs": "https://github.com/prettier/plugin-pug/issues",
 	"license": "MIT",
+	"files": [
+		"dist",
+		"src",
+		"tsconfig.json"
+	],
 	"dependencies": {
 		"pug-lexer": "~4.1.0"
 	},
@@ -34,17 +39,17 @@
 		"@types/jest": "~25.2.1",
 		"@types/node": "~14.0.1",
 		"@types/prettier": "~2.0.0",
-		"@typescript-eslint/eslint-plugin": "~2.33.0",
-		"@typescript-eslint/parser": "~2.33.0",
+		"@typescript-eslint/eslint-plugin": "~3.0.0",
+		"@typescript-eslint/parser": "~3.0.0",
 		"benchmark": "~2.1.4",
-		"eslint": "~6.8.0",
+		"eslint": "~7.0.0",
 		"eslint-config-prettier": "~6.11.0",
 		"eslint-plugin-prettier": "~3.1.3",
 		"jest": "~26.0.1",
 		"jest-junit": "~10.0.0",
 		"prettier": "2.0.5",
-		"ts-jest": "~25.5.1",
-		"typescript": "~3.9.2"
+		"ts-jest": "~26.0.0",
+		"typescript": "~3.9.3"
 	},
 	"peerDependencies": {
 		"prettier": "^2.0.0"
