--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,8 @@
 	},
 	"extends": [
 		"eslint:recommended",
-		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
+		"plugin:@typescript-eslint/recommended-requiring-type-checking",
 		"prettier",
 		"prettier/@typescript-eslint"
 	],
@@ -17,7 +17,8 @@
 	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": ["./tsconfig.json", "./test/tsconfig.json"]
+		"project": ["./tsconfig.lint.json"],
+		"warnOnUnsupportedTypeScriptVersion": false
 	},
 	"plugins": ["@typescript-eslint", "prettier"],
 	"rules": {
@@ -26,7 +27,7 @@
 		"quotes": ["error", "single", { "avoidEscape": true }],
 		"semi": ["error", "always"],
 
-		"@typescript-eslint/ban-ts-ignore": "error",
+		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
 		"@typescript-eslint/indent": ["error", "tab", { "SwitchCase": 1, "ignoredNodes": ["MemberExpression"] }],
 		"@typescript-eslint/interface-name-prefix": "off",
