--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -2,14 +2,12 @@
 	"compilerOptions": {
 		"target": "ES2018",
 		"module": "CommonJS",
-		"inlineSourceMap": true,
 		"lib": ["ES2018", "DOM"],
-		"outDir": "dist",
 		"moduleResolution": "Node",
-		"rootDir": "src",
+		"rootDir": ".",
 		"strict": true,
-		"removeComments": true
+		"removeComments": true,
+		"noEmit": true
 	},
-	"include": ["src/**/*"],
 	"exclude": ["node_modules"]
 }
