Disable audit for devDependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,11 @@ jobs:
                   name: JUnit_${{ matrix.os }}_${{ matrix.node }}_${{ github.sha }}
                   path: junit.xml
 
-            - name: Audit
-              run: yarn audit
+            - name: Audit dependencies
+              run: yarn audit dependencies
+
+            - name: Audit peerDependencies
+              run: yarn audit peerDependencies
 
             - name: Build
               run: yarn build
