--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
 		"tsconfig.json"
 	],
 	"dependencies": {
-		"pug-lexer": "~5.0.0"
+		"pug-lexer": "^5.0.0"
 	},
 	"devDependencies": {
-		"@types/jest": "~26.0.4",
-		"@types/node": "~14.0.23",
+		"@types/jest": "~26.0.7",
+		"@types/node": "~14.0.27",
 		"@types/prettier": "~2.0.2",
-		"@typescript-eslint/eslint-plugin": "~3.6.1",
-		"@typescript-eslint/parser": "~3.6.1",
+		"@typescript-eslint/eslint-plugin": "~3.7.1",
+		"@typescript-eslint/parser": "~3.7.1",
 		"benchmark": "~2.1.4",
-		"eslint": "~7.4.0",
+		"eslint": "~7.5.0",
 		"eslint-config-prettier": "~6.11.0",
 		"eslint-plugin-prettier": "~3.1.4",
-		"jest": "~26.1.0",
-		"jest-junit": "~11.0.1",
+		"jest": "~26.2.1",
+		"jest-junit": "~11.1.0",
 		"prettier": "2.0.5",
-		"ts-jest": "~26.1.3",
+		"ts-jest": "~26.1.4",
 		"typescript": "~3.9.7"
 	},
 	"peerDependencies": {
