--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push]
+on:
+    push:
+        branches:
+            - master
+    pull_request:
 
 jobs:
     build:
@@ -22,7 +26,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Set node version to ${{ matrix.node }}
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node }}
 
