Support prettier-ignore comments inside pug templates
Use such comments to prevent automatic formatting of the following line or block:
//- prettier-ignore

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,7 @@ max_line_length = off
 trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
+
+[*.pug]
+indent_style = space
+indent_size = 2
