Enforce typedef for member variables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,18 +41,6 @@
 		"@typescript-eslint/prefer-nullish-coalescing": "warn",
 		"@typescript-eslint/prefer-optional-chain": "warn",
 		"@typescript-eslint/restrict-template-expressions": "off",
-		"@typescript-eslint/typedef": [
-			"warn",
-			{
-				"arrayDestructuring": false,
-				"arrowParameter": false,
-				"memberVariableDeclaration": false,
-				"objectDestructuring": false,
-				"parameter": false,
-				"propertyDeclaration": false,
-				"variableDeclaration": true,
-				"variableDeclarationIgnoreFunction": false
-			}
-		]
+		"@typescript-eslint/typedef": ["warn", { "memberVariableDeclaration": true, "variableDeclaration": true }]
 	}
 }
