--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
 		"@typescript-eslint/no-unused-vars": "off",
 		"@typescript-eslint/prefer-nullish-coalescing": "warn",
 		"@typescript-eslint/prefer-optional-chain": "warn",
+		"@typescript-eslint/prefer-readonly": ["warn"],
 		"@typescript-eslint/restrict-template-expressions": "off",
 		"@typescript-eslint/typedef": ["warn", { "memberVariableDeclaration": true, "variableDeclaration": true }]
 	}
