--- a/package.json
+++ b/package.json
@@ -37,17 +37,18 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~26.0.15",
-		"@types/node": "~14.14.5",
+		"@types/node": "~14.14.6",
 		"@types/prettier": "~2.1.5",
 		"@typescript-eslint/eslint-plugin": "~4.6.0",
 		"@typescript-eslint/parser": "~4.6.0",
 		"benchmark": "~2.1.4",
 		"eslint": "~7.12.1",
-		"eslint-config-prettier": "~6.14.0",
+		"eslint-config-prettier": "~6.15.0",
 		"eslint-plugin-prettier": "~3.1.4",
 		"jest": "~26.6.1",
 		"jest-junit": "~12.0.0",
 		"prettier": "2.1.2",
+		"prettier-plugin-organize-imports": "~1.1.1",
 		"ts-jest": "~26.4.3",
 		"typescript": "~4.0.5"
 	},
