Only run outdated on main branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
               run: yarn install --frozen-lockfile
 
             - name: Check outdated dependencies
+              if: github.ref == 'refs/heads/main'
               run: yarn outdated
 
             - name: Lint
