--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
 		"project": ["./tsconfig.lint.json"],
 		"warnOnUnsupportedTypeScriptVersion": false
 	},
-	"plugins": ["@typescript-eslint", "prettier"],
+	"plugins": ["@typescript-eslint", "prettier", "spellcheck"],
 	"rules": {
 		"curly": ["error"],
 		"linebreak-style": ["error", "unix"],
@@ -42,6 +42,59 @@
 		"@typescript-eslint/prefer-optional-chain": "warn",
 		"@typescript-eslint/prefer-readonly": ["warn"],
 		"@typescript-eslint/restrict-template-expressions": "off",
-		"@typescript-eslint/typedef": ["warn", { "memberVariableDeclaration": true, "variableDeclaration": true }]
+		"@typescript-eslint/typedef": ["warn", { "memberVariableDeclaration": true, "variableDeclaration": true }],
+
+		"spellcheck/spell-checker": [
+			"warn",
+			{
+				"minLength": 3,
+				"skipWords": [
+					"ast",
+					"backtick",
+					"blockcode",
+					"codemirror",
+					"coffeescript",
+					"colno",
+					"doctype",
+					"endregion",
+					"eos",
+					"fallthrough",
+					"filenames",
+					"frameset",
+					"func",
+					"href",
+					"javascript",
+					"len",
+					"lex",
+					"lex",
+					"lf",
+					"lineno",
+					"loc",
+					"multiline",
+					"multilines",
+					"num",
+					"outdent",
+					"parens",
+					"pipeless",
+					"plist",
+					"pragma",
+					"prepend",
+					"readdir",
+					"readonly",
+					"rvalue",
+					"str",
+					"tok",
+					"typeof",
+					"unescaped",
+					"unformatted",
+					"utf",
+					"utf8",
+					"vscode",
+					"vue",
+					"whitespace",
+					"xml"
+				]
+			}
+		]
 	}
 }
