--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
 	"devDependencies": {
 		"@types/jest": "~26.0.20",
 		"@types/node": "~14.14.27",
-		"@types/prettier": "~2.2.0",
+		"@types/prettier": "~2.2.1",
 		"@typescript-eslint/eslint-plugin": "~4.15.0",
 		"@typescript-eslint/parser": "~4.15.0",
 		"benchmark": "~2.1.4",
-		"eslint": "~7.19.0",
+		"eslint": "~7.20.0",
 		"eslint-config-prettier": "~7.2.0",
 		"eslint-plugin-prettier": "~3.3.1",
+		"eslint-plugin-spellcheck": "~0.0.17",
 		"jest": "~26.6.3",
 		"jest-junit": "~12.0.0",
 		"prettier": "2.2.1",
