--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~26.0.20",
-		"@types/node": "~14.14.27",
+		"@types/node": "~14.14.28",
 		"@types/prettier": "~2.2.1",
 		"@typescript-eslint/eslint-plugin": "~4.15.0",
 		"@typescript-eslint/parser": "~4.15.0",
 		"benchmark": "~2.1.4",
 		"eslint": "~7.20.0",
 		"eslint-config-prettier": "~7.2.0",
+		"eslint-plugin-jsdoc": "~32.0.0",
 		"eslint-plugin-prettier": "~3.3.1",
 		"eslint-plugin-spellcheck": "~0.0.17",
 		"jest": "~26.6.3",
