--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 	"scripts": {
 		"build": "tsc",
 		"format": "prettier --write .",
-		"lint": "yarn lint:src && yarn lint:test",
-		"lint:src": "eslint --ext .ts src",
-		"lint:test": "eslint --ext .test.ts tests",
+		"lint": "eslint .",
 		"test": "jest"
 	},
 	"keywords": [
@@ -45,6 +43,7 @@
 		"benchmark": "~2.1.4",
 		"eslint": "~7.21.0",
 		"eslint-config-prettier": "~8.1.0",
+		"eslint-plugin-inclusive-language": "~2.1.1",
 		"eslint-plugin-jsdoc": "~32.2.0",
 		"eslint-plugin-prettier": "~3.3.1",
 		"eslint-plugin-spellcheck": "~0.0.17",
