--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,11 @@ typings/
 # build
 dist
 
+# docs
+.temp
+.cache
+
+# tests
 tests/private
 
 tests/pug-tests/attrs.formatted.pug
@@ -100,5 +105,6 @@ tests/pug-tests/template.pug
 tests/pug-tests/text.formatted.pug
 tests/pug-tests/text.pug
 
+# benchmarking
 benchmark/
 processed-*.txt
