--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
 		"prettier-plugin-organize-imports": "~1.1.1",
 		"ts-jest": "~26.5.4",
 		"typescript": "~4.2.3",
-		"vuepress": "~2.0.0-beta.6",
-		"vuepress-vite": "~2.0.0-beta.6"
+		"vuepress": "~1.8.2"
 	},
 	"peerDependencies": {
 		"prettier": "^2.1.0"
