--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 		"prettier-plugin-organize-imports": "~1.1.1",
 		"ts-jest": "~26.5.4",
 		"typescript": "~4.2.3",
-		"vuepress": "~1.8.2"
+		"vuepress": "~1.8.2",
+		"vuepress-theme-yuu": "~3.0.1"
 	},
 	"peerDependencies": {
 		"prettier": "^2.1.0"
