--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,34 +11,30 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest, windows-latest]
-                node: [12.x, 14.x, 15.x]
+                os: [ubuntu-latest]
+                node_version: [12, 14, 15]
+                include:
+                    - os: macos-latest
+                      node_version: 14
+                    - os: windows-latest
+                      node_version: 14
             fail-fast: false
 
+        name: 'Build&Test: node-${{ matrix.node_version }}, ${{ matrix.os }}'
         steps:
-            - name: Set git to use LF on Windows
-              if: matrix.os == 'windows-latest'
-              run: |
-                  git config --global core.autocrlf false
-                  git config --global core.eol lf
-
             - name: Checkout
               uses: actions/checkout@v2
 
-            - name: Set node version to ${{ matrix.node }}
+            - name: Set node version to ${{ matrix.node_version }}
               uses: actions/setup-node@v2
               with:
-                  node-version: ${{ matrix.node }}
+                  node-version: ${{ matrix.node_version }}
 
             - name: Versions
               run: yarn versions
 
             - name: Install dependencies
               run: yarn install --frozen-lockfile
-
-            - name: Lint
-              if: matrix.os == 'ubuntu-latest' && matrix.node == '14.x'
-              run: yarn lint
 
             - name: Build
               run: yarn build
@@ -52,6 +48,41 @@ jobs:
               with:
                   name: JUnit_${{ matrix.os }}_${{ matrix.node }}_${{ github.sha }}
                   path: junit.xml
+
+    lint:
+        runs-on: ubuntu-latest
+        name: 'Lint: node-14, ubuntu-latest'
+        steps:
+            - uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
+
+            - name: Set node version to 14
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 14
+
+            - name: Prepare
+              run: yarn install --frozen-lockfile
+
+            - name: Lint
+              run: yarn lint
+
+    audit:
+        runs-on: ubuntu-latest
+        name: 'Audit: node-14, ubuntu-latest'
+        steps:
+            - uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
+
+            - name: Set node version to 14
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 14
+
+            - name: Prepare
+              run: yarn install --frozen-lockfile
 
             - name: Audit dependencies
               run: yarn audit --groups dependencies
