--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
 
         name: 'Build&Test: node-${{ matrix.node_version }}, ${{ matrix.os }}'
         steps:
+            - name: Set git to use LF on Windows
+              if: matrix.os == 'windows-latest'
+              run: |
+                  git config --global core.autocrlf false
+                  git config --global core.eol lf
+
             - name: Checkout
               uses: actions/checkout@v2
 
