--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,3 +43,5 @@ jobs:
               with:
                   target_branch: gh-pages
                   build_dir: docs/.vuepress/dist
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
