--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest]
-                node_version: [12, 14, 15]
+                node_version: [12, 14, 15, 16]
                 include:
                     - os: macos-latest
                       node_version: 14
