Upgrade to prettier v2.3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"moduleResolution": "Node",
 		"rootDir": "src",
 		"strict": true,
+		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
 		"removeComments": true
 	},
