Fix assignees must be of type String or Array

--- a/.github/ISSUE_TEMPLATE/bug-report-issue-forms-beta.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-issue-forms-beta.yml
@@ -2,7 +2,7 @@ name: Bug Report (Issue Forms Beta)
 description: Create a report to help us improve
 title: 'Bug: '
 labels: []
-assignees: ''
+assignees: []
 body:
   - type: input
     id: plugin-version
