--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,5 +97,6 @@ jobs:
               run: yarn audit --groups peerDependencies
 
             - name: Check outdated dependencies
+              continue-on-error: true
               if: github.ref == 'refs/heads/main'
               run: yarn outdated
