--- a/package.json
+++ b/package.json
@@ -40,23 +40,23 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~26.0.24",
-		"@types/node": "~16.4.0",
+		"@types/node": "~16.4.3",
 		"@types/prettier": "~2.3.2",
-		"@typescript-eslint/eslint-plugin": "~4.28.4",
-		"@typescript-eslint/parser": "~4.28.4",
+		"@typescript-eslint/eslint-plugin": "~4.28.5",
+		"@typescript-eslint/parser": "~4.28.5",
 		"benchmark": "~2.1.4",
 		"eslint": "~7.31.0",
 		"eslint-config-prettier": "~8.3.0",
 		"eslint-define-config": "~1.0.9",
 		"eslint-plugin-inclusive-language": "~2.1.1",
-		"eslint-plugin-jsdoc": "~35.5.0",
+		"eslint-plugin-jsdoc": "~36.0.4",
 		"eslint-plugin-prettier": "~3.4.0",
 		"eslint-plugin-spellcheck": "~0.0.19",
 		"jest": "~27.0.6",
 		"jest-junit": "~12.2.0",
 		"np": "~7.5.0",
 		"prettier": "2.3.2",
-		"prettier-plugin-organize-imports": "~2.2.0",
+		"prettier-plugin-organize-imports": "2.2.0",
 		"ts-jest": "~27.0.4",
 		"typescript": "~4.3.5",
 		"vuepress": "~1.8.2",
