Upgrade to yarn berry

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,7 +33,7 @@ jobs:
 
             - name: Install dependencies
               if: steps.yarn-cache.outputs.cache-hit != 'true'
-              run: yarn --frozen-lockfile
+              run: yarn install --immutable
 
             - name: Build VuePress site
               run: yarn docs:build
