--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,15 @@ dist
 .temp
 .cache
 
+# yarn no zero-install
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 # tests
 tests/private
 
@@ -108,3 +117,4 @@ tests/pug-tests/text.pug
 # benchmarking
 benchmark/
 processed-*.txt
+
