--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
               run: yarn versions
 
             - name: Install dependencies
-              run: yarn install --frozen-lockfile
+              run: yarn install --immutable
 
             - name: Build
               run: yarn build
@@ -69,7 +69,7 @@ jobs:
                   node-version: 14
 
             - name: Prepare
-              run: yarn install --frozen-lockfile
+              run: yarn install --immutable
 
             - name: Lint
               run: yarn lint
@@ -88,13 +88,14 @@ jobs:
                   node-version: 14
 
             - name: Prepare
-              run: yarn install --frozen-lockfile
+              run: yarn install --immutable
 
-            - name: Audit dependencies
-              run: yarn audit --groups dependencies
+            - name: Audit production
+              run: yarn npm audit --all --recursive --environment production
 
-            - name: Audit peerDependencies
-              run: yarn audit --groups peerDependencies
+            - name: Audit all
+              continue-on-error: true
+              run: yarn npm audit --all --recursive
 
             - name: Check outdated dependencies
               continue-on-error: true
