--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write .",
 		"lint": "eslint .",
 		"test": "jest",
-		"prepublishOnly": "yarn clean && yarn install --cache-folder .yarn && yarn build"
+		"prepublishOnly": "yarn clean && yarn install && yarn build"
 	},
 	"keywords": [
 		"pug",
