--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,10 @@ jobs:
                   node-version: ${{ matrix.node_version }}
 
             - name: Versions
-              run: yarn versions
+              run: |
+			    npm --version
+				node --version
+				yarn --version
 
             - name: Install dependencies
               run: yarn install --immutable
