--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,12 @@
 		"yaml"
 	],
 	"eslint.validate": ["javascript", "typescript"],
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": ".yarn/sdks/typescript/lib",
+	"search.exclude": {
+		"**/.yarn": true,
+		"**/.pnp.*": true
+	},
+	"eslint.nodePath": ".yarn/sdks",
+	"prettier.prettierPath": ".yarn/sdks/prettier/index.js",
+	"typescript.enablePromptUseWorkspaceTsdk": true
 }
