--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,15 +21,13 @@ jobs:
               with:
                   node-version: 14
 
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-            - name: Fetch cached yarn dependencies
+            - name: Fetch cached dependencies
               uses: actions/cache@v2
               id: yarn-cache
               with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                  path: |
+                      **/.yarn/cache
+                      **/node_modules
                   key: node-14-os-ubuntu-latest-yarn-${{ hashFiles('**/yarn.lock') }}
                   restore-keys: |
                       node-14-os-ubuntu-latest-yarn-
