--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
 	"lockFileMaintenance": { "enabled": true },
 	"pin": false,
 	"rangeStrategy": "replace",
+	"postUpdateOptions": ["yarnDedupeHighest"],
 	"ignoreDeps": ["prettier-plugin-organize-imports"],
 	"ignorePresets": ["workarounds:typesNodeVersioning"],
 	"packageRules": [
