--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
 		"pug-lexer": "^5.0.0"
 	},
 	"devDependencies": {
-		"@types/jest": "~27.0.1",
-		"@types/node": "~16.9.1",
-		"@types/prettier": "~2.3.2",
-		"@typescript-eslint/eslint-plugin": "~4.31.0",
-		"@typescript-eslint/parser": "~4.31.0",
+		"@types/jest": "~27.0.2",
+		"@types/node": "~16.10.1",
+		"@types/prettier": "~2.4.0",
+		"@typescript-eslint/eslint-plugin": "~4.31.2",
+		"@typescript-eslint/parser": "~4.31.2",
 		"benchmark": "~2.1.4",
 		"eslint": "~7.32.0",
 		"eslint-config-prettier": "~8.3.0",
@@ -52,11 +52,11 @@
 		"eslint-plugin-jsdoc": "~36.1.0",
 		"eslint-plugin-prettier": "~4.0.0",
 		"eslint-plugin-spellcheck": "~0.0.19",
-		"jest": "~27.1.1",
-		"jest-junit": "~12.2.0",
+		"jest": "~27.2.2",
+		"jest-junit": "~12.3.0",
 		"np": "~7.5.0",
-		"prettier": "2.4.0",
-		"prettier-plugin-organize-imports": "2.2.0",
+		"prettier": "2.4.1",
+		"prettier-plugin-organize-imports": "~2.3.4",
 		"ts-jest": "~27.0.5",
 		"typescript": "~4.4.3",
 		"vuepress": "~1.8.2",
