--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,35 +35,24 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node_version }}
-
-            - name: Fetch cached dependencies
-              uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: |
-                      **/.yarn/cache
-                      **/node_modules
-                  key: node-${{ matrix.node_version }}-os-${{ matrix.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      node-${{ matrix.node_version }}-os-${{ matrix.os }}-yarn-
+                  cache: "pnpm"
 
             - name: Versions
               run: |
-                  echo "yarn: $(yarn --version)"
+                  echo "pnpm: $(pnpm --version)"
                   echo "npm : $(npm --version)"
                   echo "node: $(node --version)"
                   echo "process.versions:"
-                  yarn node -p process.versions
+                  pnpm node -p process.versions
 
             - name: Install dependencies
-              # if: steps.yarn-cache.outputs.cache-hit != 'true'
-              run: yarn install --immutable
+              run: pnpm install --frozen-lockfile
 
             - name: Build
-              run: yarn build
+              run: pnpm build
 
             - name: Test
-              run: yarn jest --ci --silent --reporters=default --reporters=jest-junit
+              run: pnpm jest --ci --silent --reporters=default --reporters=jest-junit
 
             - name: Upload test artifact
               uses: actions/upload-artifact@v2
@@ -84,24 +73,13 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: 14
-
-            - name: Fetch cached dependencies
-              uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: |
-                      **/.yarn/cache
-                      **/node_modules
-                  key: node-14-os-ubuntu-latest-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      node-14-os-ubuntu-latest-yarn-
+                  cache: "pnpm"
 
             - name: Prepare
-              # if: steps.yarn-cache.outputs.cache-hit != 'true'
-              run: yarn install --immutable
+              run: pnpm install --frozen-lockfile
 
             - name: Lint
-              run: yarn lint
+              run: pnpm lint
 
     audit:
         runs-on: ubuntu-latest
@@ -115,30 +93,19 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: 14
-
-            - name: Fetch cached dependencies
-              uses: actions/cache@v2
-              id: yarn-cache
-              with:
-                  path: |
-                      **/.yarn/cache
-                      **/node_modules
-                  key: node-14-os-ubuntu-latest-yarn-${{ hashFiles('**/yarn.lock') }}
-                  restore-keys: |
-                      node-14-os-ubuntu-latest-yarn-
+                  cache: "pnpm"
 
             - name: Prepare
-              # if: steps.yarn-cache.outputs.cache-hit != 'true'
-              run: yarn install --immutable
+              run: pnpm install --frozen-lockfile
 
             - name: Audit production
-              run: yarn npm audit --all --recursive --environment production
+              run: pnpm audit --prod
 
             - name: Audit all
               continue-on-error: true
-              run: yarn npm audit --all --recursive
+              run: pnpm audit
 
             - name: Check outdated dependencies
               continue-on-error: true
               if: github.ref == 'refs/heads/main'
-              run: yarn outdated --url
+              run: pnpm outdated --long
