Explicitly set pnpm version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
+              with:
+                  version: 6
 
             - name: Set node version to ${{ matrix.node_version }}
               uses: actions/setup-node@v2
@@ -74,6 +76,8 @@ jobs:
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
+              with:
+                  version: 6
 
             - name: Set node version to 14
               uses: actions/setup-node@v2
@@ -97,6 +101,8 @@ jobs:
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
+              with:
+                  version: 6
 
             - name: Set node version to 14
               uses: actions/setup-node@v2
