--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,8 @@ jobs:
 
             - name: Install pnpm
               uses: pnpm/action-setup@v2
+              with:
+                  version: 6
 
             - name: Setup Node.js
               uses: actions/setup-node@v2
