--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
               run: pnpm install --frozen-lockfile
 
             - name: Build VuePress site
-              run: pnpm docs:build
+              run: pnpm run docs:build
 
             - name: Deploy to GitHub Pages
               uses: crazy-max/ghaction-github-pages@v2
