--- a/package.json
+++ b/package.json
@@ -40,25 +40,25 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~27.0.2",
-		"@types/node": "~16.10.3",
+		"@types/node": "~16.11.4",
 		"@types/prettier": "~2.4.1",
-		"@typescript-eslint/eslint-plugin": "~5.0.0",
-		"@typescript-eslint/parser": "~5.0.0",
+		"@typescript-eslint/eslint-plugin": "~5.1.1-alpha.8",
+		"@typescript-eslint/parser": "~5.1.1-alpha.8",
 		"benchmark": "~2.1.4",
-		"eslint": "~8.0.0",
+		"eslint": "~8.1.0",
 		"eslint-config-prettier": "~8.3.0",
 		"eslint-define-config": "~1.1.1",
 		"eslint-plugin-inclusive-language": "~2.1.1",
-		"eslint-plugin-jsdoc": "~36.1.1",
+		"eslint-plugin-jsdoc": "~37.0.0",
 		"eslint-plugin-prettier": "~4.0.0",
 		"eslint-plugin-spellcheck": "~0.0.19",
-		"jest": "~27.2.5",
+		"jest": "~27.3.1",
 		"jest-junit": "~13.0.0",
 		"np": "~7.5.0",
 		"prettier": "2.4.1",
 		"prettier-plugin-organize-imports": "~2.3.4",
-		"ts-jest": "~27.0.5",
-		"typescript": "~4.4.3",
+		"ts-jest": "~27.0.7",
+		"typescript": "~4.4.4",
 		"vuepress": "~1.8.2",
 		"vuepress-theme-yuu": "~3.1.1"
 	},
