--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
 	},
 	"devDependencies": {
 		"@types/jest": "~27.0.2",
-		"@types/node": "~16.11.4",
+		"@types/node": "~16.11.6",
 		"@types/prettier": "~2.4.1",
-		"@typescript-eslint/eslint-plugin": "~5.1.1-alpha.8",
-		"@typescript-eslint/parser": "~5.1.1-alpha.8",
+		"@typescript-eslint/eslint-plugin": "~5.2.0",
+		"@typescript-eslint/parser": "~5.2.0",
 		"benchmark": "~2.1.4",
 		"eslint": "~8.1.0",
 		"eslint-config-prettier": "~8.3.0",
 		"eslint-define-config": "~1.1.2",
 		"eslint-plugin-inclusive-language": "~2.1.1",
-		"eslint-plugin-jsdoc": "~37.0.0",
+		"eslint-plugin-jsdoc": "~37.0.3",
 		"eslint-plugin-prettier": "~4.0.0",
 		"eslint-plugin-spellcheck": "~0.0.19",
 		"jest": "~27.3.1",
