--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"strict": true,
 		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
-		"removeComments": true
+		"removeComments": true,
+		"esModuleInterop": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules"]
