--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -7,7 +7,8 @@
 		"rootDir": ".",
 		"strict": true,
 		"removeComments": true,
-		"noEmit": true
+		"noEmit": true,
+		"esModuleInterop": true
 	},
 	"exclude": ["node_modules"]
 }
